# pictureupgrader

./: .gitignore  README.md
.github/workflows/: build.yml
app/src/main/assets/models/: .gitkeep
app/src/main/cpp/: CMakeLists.txt  colornet.cpp  colornet_impl.cpp  face.cpp  generator.cpp  native-lib.cpp  pipeline.cpp  realesrgan.cpp
app/src/main/cpp/include/: colornet.h  model.h  pipeline.h
app/src/main/java/com/ernesto/pictureupgrader/: MainActivity.kt
